Entities,Repositories,Controllers,Services added for the user

--- a/.env
+++ b/.env
@@ -4,6 +4,16 @@ DB_PASSWORD=
 DB_PORT=
 DB_NAME=
 DB_HOST=
-
+DB_URL=
 #Server Variables
 APP_PORT=
+TYPEORM_SYNCHRONIZE_DB=
+
+#OTP secret
+OTP_SECRET=
+
+#TWILIO credentials
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+TWILIO_SERVICE_SID=
