--- a/.env
+++ b/.env
@@ -7,9 +7,10 @@ DB_HOST=
 DB_URL=
 #Server Variables
 APP_PORT=
+UPLOADED_IMAGES_PATH=
 TYPEORM_SYNCHRONIZE_DB=
 
-#OTP secret
+#OTP secret [DEPRECATED]
 OTP_SECRET=
 
 #TWILIO credentials
@@ -17,3 +18,6 @@ TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
 TWILIO_SERVICE_SID=
+
+#JWT TOKEN SECRET
+JWT_SECRET=
